[gd_scene load_steps=5 format=2]

[ext_resource path="res://engine/fonts/Pixel-Life.tres" type="DynamicFont" id=1]
[ext_resource path="res://engine/scenes/ui/button_icon/ButtonIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://engine/scenes/ui/button_prompt/ButtonPrompt.gd" type="Script" id=3]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/1.png" type="Texture" id=5]

[node name="ButtonPrompt" type="HBoxContainer"]
margin_right = 102.0
margin_bottom = 16.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
preview_texture = ExtResource( 5 )

[node name="ProgressBarContainer" type="Node2D" parent="."]
visible = false
position = Vector2( -2, 0 )

[node name="ColorRect" type="ColorRect" parent="ProgressBarContainer"]
margin_top = -2.0
margin_right = 107.0
margin_bottom = 18.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.133333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonIconContainer" type="Control" parent="."]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2

[node name="ButtonIcon" parent="ButtonIconContainer" instance=ExtResource( 2 )]
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 16.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenLabel" type="Tween" parent="."]

[node name="TweenIcon" type="Tween" parent="."]

[node name="TweenVisibility" type="Tween" parent="."]
